<!--Jairam Kakar - N01179234 - CENG-258-RNC-->
<!--Aryan Sood - N01393003 - CENG-258-RNA-->
<resources>

    <!--AS Strings-->
    <string name="app_name">Code Masters</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Code Masters</string>
    <string name="nav_header_subtitle">Aryan Sood &amp; Jairam Kakkar</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_download">Download</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_File">File I/O</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_shape">Shape</string>
    <string name="download_item">Select an item to download</string>
    <string name="email_entry">Please enter an email address</string>
    <string name="database_storage">Database storage</string>
    <string name="shapeselect">Please Select a shape</string>
    <string name="action_help">Help</string>
    <string name="help_redirect">www.apple.ca</string>
    <string name="exit">Exit</string>
    <string name="exitmsg">Are you sure you want to Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="url">https://www.apple.com/ca/</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="country">Country</string>
    <string name="humidity">Humidity</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="city_request">Please Select a City</string>
    <string-array name="emails">
        <item>codemasters@icloud.com</item>
        <item>testuser@gmail.com</item>
        <item>demouser@yahoo.ca</item>
        <item>alpha@gmail.com</item>
        <item>apple@gmail.com</item>
        <item>marketing@gmail.com</item>
        <item>abc@gmail.com</item>
    </string-array>
    <string-array name="cities">
        <item>Berlin</item>
        <item>Toronto</item>
        <item>London</item>
        <item>Paris</item>
        <item>Dubai</item>
    </string-array>
    <string-array name="lats">
        <item>52.520008</item>
        <item>43.777702</item>
        <item>51.507351</item>
        <item>48.856613</item>
        <item>25.2653471</item>
    </string-array>
    <string-array name="longs">
        <item>13.404954</item>
        <item>-79.233238</item>
        <item>-0.127758</item>
        <item>2.352222</item>
        <item>55.2924914</item>
    </string-array>
    <!-- JK Strings-->
    <string name="jkTest" translatable="false">JK Test 1,2,3.</string>
    <string name="storeBtnTxt">Store</string>
    <string name="rectangle" translatable="false">rectangle</string>
    <string name="display_of_sweepgradient">Display of SweepGradient.</string>
    <string name="please_enter_some_info">Please enter some info..</string>
    <string name="coming_soon">Under Construction</string>
    <string name="jayAryanET" translatable="false">CodeMasters.txt</string>
    <string name="addTxtSuc">Added Text Successfully!</string>
    <string name="jkName" translatable="false">Jairam Kakar</string>
    <string name="asName" translatable="false">Aryan Sood</string>
    <string name="displayFileTitle">Click \'Display\' to display contents of file.</string>
    <string name="deleteFileTitle">Click \'Delete\' to delete the file.</string>
    <string name="displayBtnTxt">DISPLAY</string>
    <string name="deleteBtnTxt">DELETE</string>
    <string name="selectColorTitle">Change Background Color of \'HOME\' :</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="yellow">Yellow</string>
    <string name="saveCAPS">SAVE SETTINGS</string>
    <string name="userChoiceKey" translatable="false">userChoiceKey</string>
    <string name="defaultCAPS">DEFAULT SETTINGS</string>
    <string name="selectTimeFormatTitle">Change Time Format of \'HOME\' :</string>
    <string name="arch">Arch</string>
    <string name="star">Star</string>
    <string name="roundedRect">Rounded Rectangle</string>
    <string name="oval">Oval</string>
    <string name="shapeDescript">A Shape</string>
    <string name="downDescript">Download File</string>
    <string name="deleted">Deleted</string>
    <string name="nonExisting">No Contents</string>
    <string name="input" translatable="false">input</string>
    <string name="txtFile" translatable="false">CodeMasters.txt</string>
    <string name="filePath" translatable="false">/data/data/aryan1.jairam2.codemasters/files/CodeMasters.txt</string>
    <string name="addFile" translatable="false">addfile</string>

</resources>