<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_download" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_baseline_cloud_24"
            android:title="@string/menu_weather" />
        <item
            android:id="@+id/nav_file"
            android:icon="@drawable/ic_baseline_file_24"
            android:title="@string/menu_File"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings"/>

        <item
            android:id="@+id/nav_shape"
            android:icon="@drawable/ic_baseline_draw_24"
            android:title="@string/menu_shape"/>

    </group>
</menu>